Bug 163112 - ksmserver crash before logout screen
Summary: ksmserver crash before logout screen
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Lubos Lunak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-03 07:52 UTC by Simon St James
Modified: 2008-06-07 18:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace (5.30 KB, application/octet-stream)
2008-06-03 07:52 UTC, Simon St James
Details
Check that the list of processors is valid before using. (1.13 KB, patch)
2008-06-07 13:34 UTC, Simon St James
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon St James 2008-06-03 07:52:10 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.2.3 (Ubuntu 4.2.3-2ubuntu7)
 
OS:                Linux

Using KDE4Daily, ksmserver will reliably crash immediately upon clicking on the "Leave" option in the right-click popup menu summoned by right-clicking on the desktop, with the result that KDE is immediately torn down (before the logout dialog appears) and we are dumped back at the KDM screen.  No errors or crashes are reported to the user - the component was found by looking at .xsession-errors and then when identified attaching gdb to ksmserver in a separate X session.
Comment 1 Simon St James 2008-06-03 07:52:46 UTC
Created attachment 25080 [details]
Backtrace
Comment 2 Simon St James 2008-06-03 08:05:15 UTC
(I should point out that KDE4Daily runs inside a Qemu virtual machine, so things like lists of processors etc may behave differently than in a "real" computer.  This might also be a bug in Solid itself)
Comment 3 Simon St James 2008-06-07 13:34:57 UTC
Created attachment 25187 [details]
Check that the list of processors is valid before using.

KDE4Daily is now using the attached patch which appears to solve the issue. 
Should you choose to accept it, this will be my first ever KDE patch!
Comment 4 Fredrik Höglund 2008-06-07 18:26:10 UTC
SVN commit 818075 by fredrik:

Fix a crash when failing to get the processor device list from Solid.
Patch by Simon St James <simon@etotheipiplusone.com>

BUG: 163112


 M  +13 -4     fadeeffect.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=818075