Fix a crash when failing to get the processor device list from Solid. Patch by Simon St James <simon@etotheipiplusone.com>

BUG: 163112

svn path=/trunk/KDE/kdebase/workspace/; revision=818075